add spring cloud gateway for hoxton

--- a/spring-cloud-hoxton/pom.xml
+++ b/spring-cloud-hoxton/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-cloud-hoxton-eureka-server</module>
         <module>spring-cloud-hoxton-service-provider</module>
         <module>spring-cloud-hoxton-service-consumer</module>
+        <module>spring-cloud-hoxton-api-gateway</module>
     </modules>
 
 
