--- a/spring-cloud-iiford/spring-cloud-iiford-native/spring-cloud-iiford-native-service-discovery/pom.xml
+++ b/spring-cloud-iiford/spring-cloud-iiford-native/spring-cloud-iiford-native-service-discovery/pom.xml
@@ -15,6 +15,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
