--- a/spring-cloud-iiford/spring-cloud-iiford-service-provider/src/main/resources/application.yml
+++ b/spring-cloud-iiford/spring-cloud-iiford-service-provider/src/main/resources/application.yml
@@ -22,9 +22,11 @@ server:
       # 是否开启
       enabled: true
       # 格式
-      pattern: '[%{time,yyyy-MM-dd HH:mm:ss.S z}] %m %U "%q" %s %D %b %{i,X-B3-TraceId},%{i,X-B3-SpanId}
-                %{i,X-Real-IP} %{i,Referer} "%{i,User-Agent}" %{i,Platform} %l %u
-                %I %v %a'
+      pattern: '{"time":"%{time,yyyy-MM-dd HH:mm:ss.S}","method":"%m","uri":"%U",
+               "params":"%q","responseStatus":"%s","responseTime":"%D","responseSize":"%b",
+               "traceId":"%{i,traceId}","spanId":"%{i,spanId}","ip":"%{i,X-Real-IP}",
+               "referer":"%{i,Referer}","userAgent":"%{i,User-Agent}","platform":"%{i,Platform}",
+               "thread":"%I", "localhost":"%{HOST_AND_PORT}"}'
       # 文件前缀
       prefix: access.
     # 以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理
@@ -34,11 +36,12 @@ server:
     buffer-size: 128
     # 是否分配的直接内存(NIO直接分配的堆外内存)，这里开启，所以java启动参数需要配置下直接内存大小，减少不必要的GC
     directBuffers: true
-    # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
-    io-threads: 32
-    # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
-    # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
-    worker-threads: 512
+    threads:
+      # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
+      io: 16
+      # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
+      # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
+      worker: 128
 
 # actuator设置
 management:
@@ -113,9 +116,11 @@ server:
       # 是否开启
       enabled: true
       # 格式
-      pattern: '[%{time,yyyy-MM-dd HH:mm:ss.S z}] %m %U "%q" %s %D %b %{i,X-B3-TraceId},%{i,X-B3-SpanId}
-                %{i,X-Real-IP} %{i,Referer} "%{i,User-Agent}" %{i,Platform} %l %u
-                %I %v %a'
+      pattern: '{"time":"%{time,yyyy-MM-dd HH:mm:ss.S}","method":"%m","uri":"%U",
+                 "params":"%q","responseStatus":"%s","responseTime":"%D","responseSize":"%b",
+                 "traceId":"%{i,traceId}","spanId":"%{i,spanId}","ip":"%{i,X-Real-IP}",
+                 "referer":"%{i,Referer}","userAgent":"%{i,User-Agent}","platform":"%{i,Platform}",
+                 "thread":"%I", "localhost":"%{HOST_AND_PORT}"}'
       # 文件前缀
       prefix: access.
     # 以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理
@@ -125,11 +130,12 @@ server:
     buffer-size: 128
     # 是否分配的直接内存(NIO直接分配的堆外内存)，这里开启，所以java启动参数需要配置下直接内存大小，减少不必要的GC
     directBuffers: true
-    # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
-    io-threads: 32
-    # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
-    # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
-    worker-threads: 512
+    threads:
+      # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
+      io: 16
+      # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
+      # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
+      worker: 128
 
 # actuator设置
 management:
@@ -204,9 +210,11 @@ server:
       # 是否开启
       enabled: true
       # 格式
-      pattern: '[%{time,yyyy-MM-dd HH:mm:ss.S z}] %m %U "%q" %s %D %b %{i,X-B3-TraceId},%{i,X-B3-SpanId}
-                %{i,X-Real-IP} %{i,Referer} "%{i,User-Agent}" %{i,Platform} %l %u
-                %I %v %a'
+      pattern: '{"time":"%{time,yyyy-MM-dd HH:mm:ss.S}","method":"%m","uri":"%U",
+                 "params":"%q","responseStatus":"%s","responseTime":"%D","responseSize":"%b",
+                 "traceId":"%{i,traceId}","spanId":"%{i,spanId}","ip":"%{i,X-Real-IP}",
+                 "referer":"%{i,Referer}","userAgent":"%{i,User-Agent}","platform":"%{i,Platform}",
+                 "thread":"%I", "localhost":"%{HOST_AND_PORT}"}'
       # 文件前缀
       prefix: access.
     # 以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理
@@ -216,11 +224,12 @@ server:
     buffer-size: 128
     # 是否分配的直接内存(NIO直接分配的堆外内存)，这里开启，所以java启动参数需要配置下直接内存大小，减少不必要的GC
     directBuffers: true
-    # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
-    io-threads: 32
-    # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
-    # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
-    worker-threads: 512
+    threads:
+      # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
+      io: 16
+      # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
+      # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
+      worker: 128
 
 # actuator设置
 management:
@@ -295,9 +304,11 @@ server:
       # 是否开启
       enabled: true
       # 格式
-      pattern: '[%{time,yyyy-MM-dd HH:mm:ss.S z}] %m %U "%q" %s %D %b %{i,X-B3-TraceId},%{i,X-B3-SpanId}
-                %{i,X-Real-IP} %{i,Referer} "%{i,User-Agent}" %{i,Platform} %l %u
-                %I %v %a'
+      pattern: '{"time":"%{time,yyyy-MM-dd HH:mm:ss.S}","method":"%m","uri":"%U",
+                 "params":"%q","responseStatus":"%s","responseTime":"%D","responseSize":"%b",
+                 "traceId":"%{i,traceId}","spanId":"%{i,spanId}","ip":"%{i,X-Real-IP}",
+                 "referer":"%{i,Referer}","userAgent":"%{i,User-Agent}","platform":"%{i,Platform}",
+                 "thread":"%I", "localhost":"%{HOST_AND_PORT}"}'
       # 文件前缀
       prefix: access.
     # 以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理
@@ -307,11 +318,12 @@ server:
     buffer-size: 128
     # 是否分配的直接内存(NIO直接分配的堆外内存)，这里开启，所以java启动参数需要配置下直接内存大小，减少不必要的GC
     directBuffers: true
-    # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
-    io-threads: 32
-    # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
-    # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
-    worker-threads: 512
+    threads:
+      # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
+      io: 16
+      # 阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程
+      # 它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
+      worker: 128
 
 # actuator设置
 management:
