--- a/spring-cloud-iiford/spring-cloud-iiford-webflux-common/pom.xml
+++ b/spring-cloud-iiford/spring-cloud-iiford-webflux-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-iiford-service-common</artifactId>
+    <artifactId>spring-cloud-iiford-webflux-common</artifactId>
 
     <dependencies>
         <dependency>
@@ -57,20 +57,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--暴露http接口， servlet框架采用nio的undertow，注意直接内存使用，减少GC-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--暴露http接口， webflux框架采用nio的undertow，注意直接内存使用，减少GC-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+        <!--使用webflux相关异步接口-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
     </dependencies>
 </project>
